# talon

./: .env.example  .gitignore  README.md  pyproject.toml
config/: model_routing.yaml  settings.yaml  sources.yaml
deploy/: com.talon.agent.plist
scripts/: backfill_outcomes.py  backtest.py  run_postmortem.py  setup_db.py  train_model.py  wipe_outcomes.py
skill/: SKILL.md  analyze.py
src/: main.py  orchestrator.py
src/analysis/: critic.py  iv_filter.py  on_demand.py  scoring_engine.py  setup_detector.py  synthesizer.py  vision_analyst.py
src/backtest/: engine.py
src/cost/: model_router.py  rate_limiter.py  token_tracker.py
src/db/: database.py  models.py
src/delivery/: formatter.py  telegram_bot.py
src/learning/: adaptive_thresholds.py  feedback_loop.py  hour_of_day.py  ml_model.py  outcome_tracker.py  position_monitor.py  postmortem.py  source_evaluator.py  weight_tuner.py
src/obs/: trace.py
src/risk/: breakers.py
src/scanner/: greeks.py  market_scanner.py  news_scanner.py  option_quotes.py  options_scanner.py
tests/: test_edge.py  test_formatter.py  test_guardrails.py  test_scoring.py
